welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:54: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  gauche()
  ^Array1:55: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  while (!estFaceMur()) {
  ^Array1:59: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
  return largeur
  ^